[FIX] web_enterprise: add padding to first column in listview
before this commit: when listview is displayed in non touch device for example
in desktop it does not have padding in first column of the listview, either
it is record selector or data column it is displayed very start of right side
which looks weird.
The issue arised after commit: https://github.com/odoo/enterprise/pull/11960/commits/1160cb8d15bef943e3d46c3368286eb419222c17
it adds parent selector with '.o_web_client:not(.o_touch_device)' in
'o-list-view-full-width-padding' mixin and used that mixin inside selector with
'body:not(.o_touch_device)', so final selector becomes
'.o_web_client:not(.o_touch_device) body:not(.o_touch_device)' which will never
match any element so css written will never be applied on any element.

after this commit: first column will have left padding so it will displayed
with some space at left side.

task-2393718

closes odoo/enterprise#15001

--- a/web_enterprise/static/src/scss/list_view.scss
+++ b/web_enterprise/static/src/scss/list_view.scss
@@ -29,7 +29,6 @@
 
     // ------- Make full-width tables to fit odoo layout -------
     > thead, > tbody, > tfoot {
-        .o_web_client:not(.o_touch_device) & {
         > tr > * {
             &:first-child {
                 padding-left: $o-horizontal-padding!important;
@@ -40,7 +39,6 @@
             &.o_list_record_selector {
                 padding-right: 5px!important;
             }
-        }
         }
     }
 }
@@ -163,7 +161,7 @@
 }
 
 // Standalone list views
-body:not(.o_touch_device) .o_content > .o_list_view > .table-responsive > .table {
+.o_content > .o_list_view > .table-responsive > .table {
     // List views always have the table-sm class, maybe we should remove
     // it (and consider it does not exist) and change the default table paddings
     @include o-list-view-full-width-padding($base: $table-cell-padding-sm, $ratio: 2);
@@ -192,7 +190,13 @@ body:not(.o_touch_device) .o_content > .o_list_view > .table-responsive > .table
         background-color: $table-hover-bg !important;
     }
 
-    .o_web_client.o_touch_device .o_content table.o_list_table.table tr > :first-child {
-        display: none;
+    .o_web_client.o_touch_device .o_content table.o_list_table.table tr > {
+        :first-child {
+            display: none;
+        }
+        // first-child will be hidden so add left padding to second child
+        :nth-child(2) {
+            padding-left: $o-horizontal-padding!important;
+        }
     }
 }
